[project]
name = "pubmed-apifetcher"
version = "0.1.0"
description = ""
authors = [
    {name = "RATHISHKUMAR07",email = "rathishkumar022@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
